@@ -92,7 +92,7 @@ public interface GTShapedRecipeSchema {
                 for (char c : pattern.get(i).toCharArray()) { // Inject tool symbol mappings
                     if (tools.contains(c) && !addedTools.contains(c)) {
                         var tool = ToolHelper.getToolFromSymbol(c);
-                        keyEntries.add(new TinyMap.Entry<>(c, Ingredient.of(tool.itemTags.getFirst())));
+                        keyEntries.add(new TinyMap.Entry<>(c, Ingredient.of(tool.craftingTags.get(0))));
                         addedTools.add(c);
                     }
                 }
